working on inside section pictures

--- a/home.css
+++ b/home.css
@@ -61,3 +61,10 @@ body{
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   
 }
+.about-us-pic{
+  background-image: url('logos/about_us_2.jpg');
+  background-size: cover; 
+  background-position:center;
+  background-repeat: no-repeat;
+  
+}
