--- a/home.css
+++ b/home.css
@@ -32,6 +32,7 @@ body{
   background-color: lightpink;  
 }
 
+
 .second-section{
   
   margin-top: 15px;
@@ -46,7 +47,21 @@ body{
   border-style: solid;
   border-width: 1px;
   border-color: black;
+  position: relative;
 }
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0); /* Initial transparent background */
+  transition: background-color 0.3s ease;
+}
+.overlay:hover{
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 
 .logo-bar{
   margin-top: 15px;
@@ -68,31 +83,69 @@ body{
   background-repeat: no-repeat;
   position: relative;
 }
+
 .our-business{
   background-image: url('logos/OUR-BUSINESS_04.jpg');
   background-size: cover; 
   background-position:center;
   background-repeat: no-repeat;
+  position:relative;
 }
 .supply-chain{
   background-image: url('logos/garment-accessory-feat-.jpg');
   background-size: cover; 
   background-position:center;
   background-repeat: no-repeat;
+  position:relative;
 }
 .social-ethics{
   background-image: url('logos/about_us_3.jpg');
   background-size: cover; 
   background-position:center;
   background-repeat: no-repeat;
+  position:relative;
 
 }
 
 .about-us-text{
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: absolute;
-  bottom: 0;
+  justify-content: center;
+  top: 200px;
+  bottom: 0px;
+  left: 30px;
+  right: 40px;
+  align-items: center;
+  color: white;
   
 }
+.our-business-text{
+  position: absolute;
+  justify-content: center;
+  top: 200px;
+  bottom: 0px;
+  left: 30px;
+  right: 40px;
+  align-items: center;
+  color: white;
+}
+.supply-chain-text{
+  position: absolute;
+  justify-content: center;
+  top: 200px;
+  bottom: 0px;
+  left: 30px;
+  right: 40px;
+  align-items: center;
+  color: white;
+}
+.social-ethics-text{
+  position: absolute;
+  justify-content: center;
+  top: 200px;
+  bottom: 0px;
+  left: 30px;
+  right: 40px;
+  align-items: center;
+  color: white;
+}
+
