--- a/about-us.css
+++ b/about-us.css
@@ -1,3 +1,8 @@
+body{
+  height: 1000px;
+  
+}
+
 .header{
   height:80px;
   display:grid;
@@ -24,3 +29,49 @@
   border-color: black;
   background-color: lightblue;  
 }
+.info-pic-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 500px;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), url(about-us-page-pics/body-page-pic.jpg);
+
+  background-size: cover;
+  position: relative;  
+}
+
+.info-container{
+  color: white;
+}
+.pic-container{
+  width: 400px; /* Set your desired width */
+  height: 300px; /* Set your desired height */
+  position: relative;
+  overflow: hidden;
+}
+.pic-container img{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 10px;
+  
+}
+
+.first-text{
+  height: 70px;
+  color: white;
+  background-color: #004C97;
+  margin:0;
+}
+.first-text-paragraph{
+  margin:0;
+  padding-left: 60px;
+  padding-top: 20px;
+  font-style:oblique;
+  font-size: larger;
+  font-weight: bold;
+  
+}
+
