--- a/practice.css
+++ b/practice.css
@@ -81,3 +81,12 @@ body{
 .overlay:hover{
   background-color: rgba(0, 0, 0, 0.5);
 }
+
+.container{
+  height: 500px;
+  position: relative;
+  background-color: lightgray;
+}
+.container-1{
+  
+}
