--- a/practice.css
+++ b/practice.css
@@ -86,7 +86,28 @@ body{
   height: 500px;
   position: relative;
   background-color: lightgray;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 .container-1{
+  height: 300px;
+  background-color: aqua;
   
+  
+}
+.container-2{
+  height: 300px;
+  
+  background-color: antiquewhite;
+  position: relative;
+}
+.inside-2{
+  background-color:red;
+  position:absolute;
+  top: 50px;
+  right: 0;
+  left: 0;
+  bottom: 30%;
+  display: grid;
+  grid-template-columns: 60px 60px 60px 60px;
 }
