--- a/practice.css
+++ b/practice.css
@@ -111,3 +111,13 @@ body{
   display: grid;
   grid-template-columns: 60px 60px 60px 60px;
 }
+.pic{
+  height: 200px;
+  width: 100px;
+  background-color: antiquewhite;
+}
+img{
+  width: 100%;
+  height: 100%;
+  
+}
