--- a/our-business.css
+++ b/our-business.css
@@ -32,10 +32,11 @@ body{
   border-color: black;
   background-color: lightblue;  
 }
+
 .info-pic-container{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: 500px;
+  height: 400px;
   background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), url(about-us-page-pics/body-page-pic.jpg);
 
   background-size: cover;
@@ -62,8 +63,7 @@ body{
   border-radius: 10px;
   
 }
-
-.first-text{
+.first-paragraph{
   height: 70px;
   color: white;
   background-color: #004C97;
@@ -71,129 +71,45 @@ body{
   position: relative;
   
   
+  
 }
-.first-text-paragraph{
+.first-paragraph-text{
   margin:0;
-  padding-left: 60px;
+  padding-left: 400px;
   padding-top: 20px;
   font-style:oblique;
   font-size: larger;
   font-weight: bold;
-  
 }
-.professional-guidance{
-  height: 400px;
+
+.commited-info-pic-container{
   display: grid;
   grid-template-columns: 1fr 1fr;
+  height: 400px;
   background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), url(about-us-page-pics/body-page-pic.jpg);
 
   background-size: cover;
+  position: relative;
+    
 }
-.pro-guide-img{
-  width: 400px; /* Set your desired width */
-  height: 300px; /* Set your desired height */
+
+.commited-info-container{
+  color: white;
+}
+.commited-pic-container{
+  width: 400px; 
+  height: 300px; 
   position: relative;
   overflow: hidden;
 }
-.pro-guide-img img{
+.commited-pic-container img{
   position: absolute;
-  top: 60%;
-  left: 53%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
-  max-width: 90%;
-  max-height: 90%;
-  border-radius: 15px;
-  
-}
-
-.pro-guide-text{
-  position:relative;
-  color:white;
-  top:20%;
-  
-}
-
-.second-text{
-  height: 70px;
-  color: white;
-  background-color: #004C97;
-  margin:0;
-  
-}
-.second-text-paragraph{
-  margin:0;
-  padding-left: 60px;
-  padding-top: 20px;
-  font-style:oblique;
-  font-size: larger;
-  font-weight: bold;  
-}
-.logo-div{
-  height:350px;
-  background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), url(about-us-page-pics/body-page-pic.jpg);
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  
-  
-  
-
-}
-.platform-button{
-
-  
-  position: relative;
-}
-.inside-platform{
-  
-  position: absolute;
-  top: 50px;
-  right: 0;
-  left: 0;
-  bottom: 30%;
-  justify-content:space-evenly;
-}
-.text-div{
-  padding-left: 30px;
-}
-.platform-text{
-  font-size: 30px;
-  color: white;
-  font-weight: bolder;
-}
-.certificate-button{
-  margin-left: 20px;
-  height: 35px;
-  width: 80%;
-  background-color: #004C97;
-  color: white;
-  border-color:#004C97;
+  max-width: 100%;
+  max-height: 100%;
   border-radius: 10px;
-}
-
-.logo-bar-div{
-  height: 300px;
-  
-  
-  position: relative;
-}
-.inside-logo-bar{
-  
-  position:absolute;
-  top: 50px;
-  right: 0;
-  left: 0;
-  bottom: 30%;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  justify-content: space-evenly;
-  
-}
-.icons-class{
-  padding:10px 10px 10px 10px;
-}
-.icons-class img{
-  width: 100%;
-  height: 100%;
   
 }
 .nav-bar{
