--- a/supply-chain.css
+++ b/supply-chain.css
@@ -2,6 +2,10 @@ body{
   height: 2000px;
   
 }
+p{
+  font-family: sans-serif;
+  color: white;
+}
 
 .header{
   height:80px;
@@ -66,16 +70,20 @@ body{
   
 }
 .text-1{
-  height: 60px;
+  height: 65px;
   position: relative;
   background-color: #004c97;
-  top: 64px;
+  top: 60px;
   color: white;
+  font-size: 20px;
+  font-family: sans-serif;
+  text-align:center;
+  padding-top: 5px;
 }
 .procurement-pic-info{
   height:500px;
   position: relative;
-  top: 80px;
+  top: 60px;
   background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), url(about-us-page-pics/body-page-pic.jpg);
   background-size: cover;
   display: grid;
@@ -84,7 +92,8 @@ body{
 
 .procurement-text-div{
   color:white;
-  font-size: 18px;
+  font-size: 17px;
+  font-family: sans-serif;
 }
 
 
@@ -102,5 +111,56 @@ body{
   max-width: 100%;
   max-height: 100%;
   border-radius: 10px;
+  
+}
+.text-2{
+  height: 70px;
+  background-color: #004c97;
+  color: white;
+  position: relative;
+  top:30px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  text-align: center;
+  padding-top: 5px;
+}
+
+.prod-qc-div{
+  
+  height: 500px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), url(about-us-page-pics/body-page-pic.jpg);
+  background-size: cover;
+  top: 100px;
+}
+.prod-pic-div{
+  width: 400px; /* Set your desired width */
+  height: 300px; /* Set your desired height */
+  position: relative;
+  overflow: hidden;
+}
+.prod-pic-div img{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 10px;
+
+}
+.prod-text-div{
+  text-align: left;
+  position: relative;
+  top: 40px;
+  left: 10px;
+}
+
+.nav-bar{
+  height: 80px;
+  background-color: lightseagreen;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   
 }
