--- a/practice.css
+++ b/practice.css
@@ -121,3 +121,38 @@ img{
   height: 100%;
   
 }
+
+.header{
+  height:80px;
+  display:grid;
+  grid-template-columns: 200px 1fr;
+  background-color: white;
+  position: fixed;
+  top:0px;
+  z-index: 100;
+}
+.first-pic{ 
+  height:80px;
+  width:200px;  
+}
+.first-pic img{
+  max-width: 100%;
+  max-height: 100%;
+}
+.top-bar{
+  right: 80px;
+  left: 250px;
+  height:80px;
+  display: flex;
+  position: fixed;
+  flex-direction:row;
+  justify-content:space-around
+  
+}
+.commands{
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  padding: 10px;
+    
+}
