--- a/about-us.css
+++ b/about-us.css
@@ -4,33 +4,65 @@ body{
 }
 
 .header{
-  height:80px;
+  /* height:80px;
   display:grid;
   grid-template-columns: 200px 1fr;
-  background-color: white;
+  background-color: blue;
   position: fixed;
   top:0px;
+  z-index: 100; */
+  height: 80px;
+  display: flex;
+  align-items: center; /* Center items vertically */
+  background-color: white;
+  position: fixed;
+  top: 0px;
+  width: 100%;
   z-index: 100;
 }
-.first-pic{
-  position: fixed;
+.first-pic{ 
   height:80px;
-  width:200px;
-  background-color: lightblue;
+  width:200px;  
+}
+.first-pic img{
+  max-width: 100%;
+  max-height: 100%;
 }
 .top-bar{
-  height:80px;
-  display: grid;
+  /* height:80px;
+  display:grid;
   position: fixed;
-  grid-template-columns: 80px 80px 80px 80px 80px 80px;
+  justify-content: space-around;
   right: 80px;
   left: 300px;
+  grid-template-columns: 80px 80px 80px 80px 80px 80px; */
+  height: 80px;
+  display: flex;
+  justify-content: space-around;
+  flex: 1; /* Allow top-bar to take the remaining space */
+  margin-left: 20px;
+  
 }
 .commands{
-  border-style: solid;
-  border-width: 1px;
+  
+  /* border-width: 1px;
   border-color: black;
-  background-color: lightblue;  
+  border-right: 1px hidden; */
+  display: flex;
+  align-items: center;
+  
+  padding: 0 10px;
+  
+  
+    
+}
+.command-text{
+  padding-left: 5px;
+  color: #6f42c1; /* Medium Purple */
+  transition: color 0.3s ease;
+}
+.command-text:hover{
+  color: #563d7c;;
 }
 .info-pic-container{
   display: grid;
