--- a/contact-us.css
+++ b/contact-us.css
@@ -17,7 +17,8 @@
 }
 .first-pic{ 
   height:80px;
-  width:200px;  
+  width:200px; 
+  cursor: pointer; 
 }
 .first-pic img{
   max-width: 100%;
@@ -47,6 +48,7 @@
   align-items: center;
   
   padding: 0 10px;
+  cursor:pointer;
   
   
     
