--- a/practice.css
+++ b/practice.css
@@ -54,6 +54,7 @@ body{
   border: 2px solid lightblue; /* Border to match the initial background color */
   text-align: center;         /* Center the text inside the div */
   transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for background and text color */
+  cursor: pointer;
 }
 
 .hover-div:hover {
@@ -82,77 +83,4 @@ body{
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.container{
-  height: 500px;
-  position: relative;
-  background-color: lightgray;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-.container-1{
-  height: 300px;
-  background-color: aqua;
-  
-  
-}
-.container-2{
-  height: 300px;
-  
-  background-color: antiquewhite;
-  position: relative;
-}
-.inside-2{
-  background-color:red;
-  position:absolute;
-  top: 50px;
-  right: 0;
-  left: 0;
-  bottom: 30%;
-  display: grid;
-  grid-template-columns: 60px 60px 60px 60px;
-}
-.pic{
-  height: 200px;
-  width: 100px;
-  background-color: antiquewhite;
-}
-img{
-  width: 100%;
-  height: 100%;
-  
-}
 
-.header{
-  height:80px;
-  display:grid;
-  grid-template-columns: 200px 1fr;
-  background-color: white;
-  position: fixed;
-  top:0px;
-  z-index: 100;
-}
-.first-pic{ 
-  height:80px;
-  width:200px;  
-}
-.first-pic img{
-  max-width: 100%;
-  max-height: 100%;
-}
-.top-bar{
-  right: 80px;
-  left: 250px;
-  height:80px;
-  display: flex;
-  position: fixed;
-  flex-direction:row;
-  justify-content:space-around
-  
-}
-.commands{
-  border-style: solid;
-  border-width: 1px;
-  border-color: black;
-  padding: 10px;
-    
-}
