--- a/our-business.css
+++ b/our-business.css
@@ -22,7 +22,8 @@ body{
 }
 .first-pic{ 
   height:80px;
-  width:200px;  
+  width:200px; 
+  cursor: pointer; 
 }
 .first-pic img{
   max-width: 100%;
@@ -52,6 +53,7 @@ body{
   align-items: center;
   
   padding: 0 10px;
+  cursor:pointer;
   
   
     
