--- a/supply-chain.css
+++ b/supply-chain.css
@@ -26,7 +26,8 @@ p{
 }
 .first-pic{ 
   height:80px;
-  width:200px;  
+  width:200px; 
+  cursor: pointer; 
 }
 .first-pic img{
   max-width: 100%;
@@ -56,6 +57,7 @@ p{
   align-items: center;
   
   padding: 0 10px;
+  cursor:pointer;
   
   
     
