--- a/home.css
+++ b/home.css
@@ -171,6 +171,7 @@ body{
   right: 40px;
   align-items: center;
   color: white;
+  z-index: 5;
 }
 .supply-chain-text{
   position: absolute;
@@ -181,6 +182,7 @@ body{
   right: 40px;
   align-items: center;
   color: white;
+  z-index: 5;
 }
 .social-ethics-text{
   position: absolute;
@@ -191,5 +193,6 @@ body{
   right: 40px;
   align-items: center;
   color: white;
+  z-index: 5;
 }
 
