--- a/practice.css
+++ b/practice.css
@@ -84,27 +84,29 @@ body{
 }
 
 
-.slider {
+/* .slider {
   position: relative;
   width: 100%;
+  
+  
   overflow: hidden;
-}
+} */
 
-.slides {
+/* .slides {
   display: flex;
   transition: transform 0.5s ease;
 }
 
 .slide {
+  min-width: 100%;
+  transition: opacity 0.5s ease;
+  opacity: 0;
+  display: none; 
   flex: 0 0 100%;
 }
 
-img {
-  width: 100%;
-  height: auto;
-}
-
-.active {
+.slide.active {
+  display: block; 
   opacity: 1;
 }
 
@@ -117,6 +119,7 @@ button {
   color: #fff;
   border: none;
   cursor: pointer;
+  z-index: 10;
 }
 
 .prev {
@@ -125,4 +128,57 @@ button {
 
 .next {
   right: 10px;
+} */
+
+.box-1{
+  height: 500px;
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center;  /*Center vertically */
+  background-color: lightblue;
+  
+}
+.box-2{
+  display: flex;
+  height: 400px;
+  width: 100%; /* Adjust as needed */
+  background-color: coral;
+  transition: transform 0.5s ease;  
+  
+}
+.slides{
+  min-width: 100%;
+  transition: opacity 0.5s ease;
+  opacity: 0;
+  display: none; /*Hide all slides by default*/
+  flex: 0 0 100%;
+  position: relative;
+  overflow: hidden; 
+  
+}
+.image{
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 100%;
+}
+
+.active-slide{
+  overflow: hidden; /* Hide overflow to avoid stretching issues */
+  position: relative;
+}
+.slides.active{
+  display: block; /* Display the active slide */
+  opacity: 1;
+}
+.buttons {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  z-index: 10;
 }
