--- a/home.css
+++ b/home.css
@@ -64,10 +64,7 @@ body{
 .command-text:hover{
   color: #563d7c;;
 }
-.front-img{
-  height:300px;
-  background-color: lightpink;  
-}
+
 
 .active {
   color: lightcoral; /* Darker Purple */
@@ -200,3 +197,59 @@ body{
   z-index: 5;
 }
 
+.front-img{
+  height:400px;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+.frontimg2{
+  height:300px;
+  background-color: bisque;
+  width: 100%;
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  object-fit: contain;
+  object-position: center;
+}
+.frontimg3 {
+  min-width: 100%;
+  box-sizing: border-box;
+  
+}
+
+.frontimg3 img{
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover; /* Maintain aspect ratio and cover the container */
+  object-position: center;
+}
+
+.button1 {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 50%;
+  user-select: none;
+}
+
+.prev {
+  left: 10px;
+}
+
+.next {
+  right: 10px;
+}
+
+.button1:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
