--- a/our-business.css
+++ b/our-business.css
@@ -158,3 +158,21 @@ body{
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   
 }
+
+.nav-bar{
+  height: 80px;
+  background-color: lightseagreen;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  
+}
+
+.nav-bar-commands{
+  
+  
+  display: flex;
+  align-items: center;
+  
+  padding: 0 10px;
+  cursor:pointer;   
+}
