--- a/social-ethics.css
+++ b/social-ethics.css
@@ -199,3 +199,21 @@ p{
   position: relative;
   top: -20px;  
 }
+
+.nav-bar{
+  height: 80px;
+  background-color: lightseagreen;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  
+}
+
+.nav-bar-commands{
+  
+  
+  display: flex;
+  align-items: center;
+  
+  padding: 0 10px;
+  cursor:pointer;   
+}
