--- a/contact-us.css
+++ b/contact-us.css
@@ -122,3 +122,20 @@
   font-family: sans-serif;
   font-size: 20px;
 }
+.nav-bar{
+  height: 80px;
+  background-color: lightseagreen;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  
+}
+
+.nav-bar-commands{
+  
+  
+  display: flex;
+  align-items: center;
+  
+  padding: 0 10px;
+  cursor:pointer;   
+}
