--- a/about-us.css
+++ b/about-us.css
@@ -237,29 +237,31 @@ body{
   height: 100%;
   
 }
-.nav-bar{
-  height: 80px;
-  background-color: lightseagreen;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  
-}
+
 
 
 .nav-bar{
   height: 80px;
-  background-color: lightseagreen;
+  background-color: #004C97;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  position: relative;
+  
   
 }
 
-.nav-bar-commands{
-  
-  
+.nav-bar-commands{  
   display: flex;
   align-items: center;
-  
-  padding: 0 10px;
+  justify-content: center;
   cursor:pointer;   
+  border-right: black;
+  border-width: 1px;
+  border-style: groove;
+  text-align: center;
+  color: white;
+}
+.nav-bar :hover{
+  background-color: #002750;
+  transition: .25s;
 }
