--- a/our-business.css
+++ b/our-business.css
@@ -161,18 +161,27 @@ body{
 
 .nav-bar{
   height: 80px;
-  background-color: lightseagreen;
+  background-color: #004C97;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  position: relative;
+  
   
 }
 
-.nav-bar-commands{
-  
-  
+.nav-bar-commands{  
   display: flex;
   align-items: center;
-  
-  padding: 0 10px;
+  justify-content: center;
   cursor:pointer;   
+  border-right: black;
+  border-width: 1px;
+  border-style: groove;
+  text-align: center;
+  color: white;  
+
+}
+.nav-bar :hover{
+  background-color: #002750;
+  transition: .25s;
 }
