--- a/practice.css
+++ b/practice.css
@@ -163,33 +163,19 @@ button:hover {
 }
 
 
-/* styles.css */
-/* styles.css */
-/* body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-  background-color: #f0f0f0;
-} */
 
-.slider-container {
-  width: 100%; /* Full width of the screen */
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-}
 
-.slider {
-  display: flex;
-  transition: transform 0.5s ease-in-out;
-  width: fit-content; /* Adjust to the width of its content */
-}
 
-.slider img {
+.image-gallery {
   height: 70px;
-  width: 70px;
-  margin-right: 10px; /* Optional: space between logos */
+  display: flex;
+  overflow: hidden;
+  
+  gap: 30px; /* Add gaps between images */
 }
 
+.image-gallery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Maintain aspect ratio and cover the area */
+}
