--- a/home.css
+++ b/home.css
@@ -250,6 +250,7 @@ body{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   position: relative;
+ 
   
   
 }
@@ -275,4 +276,30 @@ body{
   margin-top: 15px;
   height: 70px;
   background-color:lightgray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+}
+.second-div{
+  height:70px;
+  
+  width: 100%;
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.third-div {
+  height: 70px;
+  display: flex;
+  min-width: 100%;
+  box-sizing: border-box;
+  gap: 30px; /* Add gaps between images */ 
+}
+
+.third-div img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Maintain aspect ratio and cover the area */
 }
