--- a/practice.css
+++ b/practice.css
@@ -144,6 +144,7 @@ button:hover {
   align-items: center;
   position: relative;
   overflow: hidden;
+  margin-bottom: 50px;
 }
 .box2{
   height:300px;
@@ -165,16 +166,36 @@ button:hover {
 
 
 
-
-.image-gallery {
-  height: 70px;
-  display: flex;
-  overflow: hidden;
+.a{
+  height:70px;
   
-  gap: 30px; /* Add gaps between images */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+} 
+
+.image-gallery{
+  height:70px;
+  background-color: bisque;
+  width: 100%;
+  display: flex;
+  transition: transform 0.5s ease-in-out;
 }
 
-.image-gallery img {
+.insider {
+  height: 70px;
+  display: flex;
+  min-width: 100%;
+  box-sizing: border-box;
+  
+
+  gap: 30px; /* Add gaps between images */
+  
+}
+
+.insider img {
   width: 100%;
   height: 100%;
   object-fit: cover; /* Maintain aspect ratio and cover the area */
