finished only finishing touches left do it if you want

--- a/about-us.css
+++ b/about-us.css
@@ -2,7 +2,9 @@ body{
   height: 2000px;
   
 }
-
+p{
+  font-family: sans-serif;
+}
 .header{
   /* height:80px;
   display:grid;
@@ -66,9 +68,11 @@ body{
 .command-text:hover{
   color: #563d7c;;
 }
-.active {
-  color: red; /* Darker Purple */
+
+.active{
+  font-style: bold;
   font-weight: bold;
+  color:hotpink;
 }
 
 
