--- a/contact-us.css
+++ b/contact-us.css
@@ -1,3 +1,7 @@
+p{
+  font-family: sans-serif;
+}
+
 .header{
   /* height:80px;
   display:grid;
@@ -61,9 +65,10 @@
 .command-text:hover{
   color: #563d7c;;
 }
-.active {
-  color: #563d7c; /* Darker Purple */
+.active{
+  font-style: bold;
   font-weight: bold;
+  color:hotpink;
 }
 .whole-body{
   height: 600px;
